# bzflag_mirror

./: .cdtbuild  BaseZone.h  BuildZone.cxx  BuildZone.h  Face.h  FloorZone.cxx  FloorZone.h  Generator.cxx  Generator.h  GridGenerator.cxx  GridGenerator.h  GridMap.cxx  Makefile  Material.cxx  Material.h  Mesh.cxx  Mesh.h  OSFile.h  Operation.cxx  Output.h  TODO  TextUtils.cpp  TextUtils.cxx  TextUtils.h  Token.cxx  Token.h  Zone.cxx  Zone.h  bzlgen.vcproj  bzwgen.cxx  commandArgs.cpp  commandArgs.h  common.h  globals.h  lexer.l  main.cpp  parser.y
Debug/: bzw  makefile  objects.mk  sources.mk  subdir.mk
Debug/dialogs/: QuickLabel.d  WorldOptionsDialog.d  subdir.mk
Debug/model/: Model.d  subdir.mk
Debug/objects/: subdir.mk
Debug/render/: subdir.mk
Debug/widgets/: subdir.mk
Debug/windows/: MainWindow.d  subdir.mk
MSVC/VC8/: BZWorkbench.vcproj
admin/: master-bans.txt
bzedit/: 3dtypes.cpp  3dtypes.h  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  base.cpp  base.h  bmp.h  box.cpp  box.h  bzedit.cpp  callbacks.cpp  callbacks.h  camera.cpp  camera.h  config.h  config.h.in  configure  configure.in  document.cpp  document.h  element.cpp  element.h  globals.cpp  globals.h  ground.cpp  ground.h  link.cpp  link.h  menus.h  model.cpp  model.h  object.cpp  object.h  (+28 more)
bzedit/data/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  addbase.xpm  addbox.xpm  addlink.xpm  addpyr.xpm  addtele.xpm  basicon.xpm  boxicon.xpm  boxwall.tga  configure  configure.in  ground.tga  iso.xpm  lnkicon.xpm  pyricon.xpm  pyrwall.tga  roof.tga  stub.xpm  target.xpm  telicon.xpm  wall.tga  xminus.xpm  xplus.xpm  yminus.xpm  yplus.xpm  zplus.xpm
bzedit/help/: INSTALL  Makefile.am  Makefile.in  config.h.in  index.html  intro.html  mainwin.html
bzeditw32/: AUTHORS
bzeditw32/BZEdit32/: BZEdit32.cpp  BZEdit32.dsp  BZEdit32.dsw  BZEdit32.h  BZEdit32.rc  BZEdit32.reg  BZEdit32.sln  BZEdit32.vcproj  BZEdit32Doc.cpp  BZEdit32Doc.h  BZEdit32View.cpp  BZEdit32View.h  DupeAndDlog.cpp  DupeAndDlog.h  ElemInspDlog.cpp  ElemInspDlog.h  ElementListDlog.cpp  ElementListDlog.h  LinkDlog.cpp  LinkDlog.h  MainFrm.cpp  MainFrm.h  Model.cpp  Model.h  NewEntToolBar.cpp  NewEntToolBar.h  StdAfx.cpp  StdAfx.h  StdObjectInfoPanel.cpp  StdObjectInfoPanel.h  Utils.cpp  Utils.h  api.h  camera.h  objects.cpp  objects.h  resource.h  world.cpp  world.h
bzeditw32/PocketEngine/: 3dTypes.h  3dUtils.cpp  Model.h  PocketEngine.cpp  PocketEngine.dsp  PocketEngine.dsw  PocketEngine.h  PocketEngine.sln  PocketEngine.vcproj  model.cpp
bzeditw32/TextureMngr/: SMELoad.cpp  SMELoad.h  TextureMngr.cpp  TextureMngr.dsp  TextureMngr.dsw  TextureMngr.h  TextureMngr.sln  TextureMngr.vcproj
bzeditw32/_test/: BZEdit.nsi  BZEdit32.exe.manifest
bzeditw32/samplePlugin/: ReadMe.txt  Resource.h  StdAfx.cpp  StdAfx.h  samplePlugin.cpp  samplePlugin.dsp  (+3 more)
bzstats/: build.properties  build.xml
bzwgen/: AUTHORS  BaseZone.h  BuildZone.cxx  BuildZone.h  Doxyfile  Expression.cxx  Expression.h  Face.h  FloorZone.cxx  FloorZone.h  Generator.cxx  Generator.h  GridGenerator.cxx  GridGenerator.h  GridMap.cxx  GridMap.h  Makefile  Material.cxx  Material.h  Mesh.cxx  Mesh.h  OSFile.cpp  OSFile.cxx  Operation.cxx  Operation.h  Output.h  Product.h  README  Rule.cxx  Rule.h  RuleSet.cxx  RuleSet.h  TODO  TextUtils.cpp  TextUtils.cxx  TextUtils.h  Zone.cxx  Zone.h  bzlgen.vcproj  bzwgen.cxx  (+9 more)
bzworkbench/: .cdtbuild  .cdtproject  .project  AUTHORS  COPYING  DEVINFO  INSTALL  Makefile  README  README.MSWindows  TextUtils.cxx  defines.h  main.cpp
custom_plugins/irclink/: Makefile.am  README.txt  irclink.cpp  irclink.def  irclink.sln  irclink.vcproj
db/: .cvsignore  HEADER.html  banfunctions.php  bzfls.php  bzfls_phpbb3functions.php  bzflsadmin.php  bzfman.cgi  common.php  config.php.tmpl  copyright.php  currentplayers.php  footer.inc  handycode.inc  header.inc  help.php  index.php  link.php  playerinfo.php  playersearch.php  playerstats.php  rss.php  rssgenerator.php  sbo_rss.php  serverinfo.php  serverlist.php  serversettings.php  serversettings.php.tmpl  setoptions.php  stats.php  weblogin.php
dialogs/: AdvancedOptionsDialog.cpp  ConeConfigurationDialog.cpp  ConfigurationMenu.cpp  Fl_Dialog.cpp  Fl_Error.cpp  Fl_Tweak.cpp  MainMenu.cpp  MasterConfigurationDialog.cpp  MenuBar.cpp  QuickLabel.cpp  WorldOptionsDialog.cpp
include/: ColorCommand.h  DataEntry.h  DrawInfo.h  Fl_Error.h  LOD.h  LODCommand.h  MainMenu.h  MainWindow.h  MasterConfigurationDialog.h  MeshFace.h  Model.h  Observable.h  Observer.h  QuickLabel.h  TextUtils.h  Transform.h  TransformWidget.h  Transformation.h  UpdateMessage.h  WorldOptionsData.h  WorldOptionsDialog.h  defines.h  flags.h  ftoa.h
model/: BZWParser.cpp  Model.cpp  Model.h  SceneBuider.cpp  SceneBuilder.cpp
objects/: arc.cpp  base.cpp  box.cpp  bz2object.cpp  cone.cpp  define.cpp  dynamicColor.cpp  group.cpp  link.cpp  material.cpp  mesh.cpp  meshbox.cpp  meshpyr.cpp  options.cpp  physics.cpp  pyramid.cpp  sphere.cpp  teleporter.cpp  tetra.cpp  texturematrix.cpp  waterLevel.cpp  weapon.cpp  world.cpp  zone.cpp
pybzflag/: .cvsignore  3dobserver.py  A silly file, with spaces and punctuation!  README  TODO  bzfs.py  cgtest.py  chat.py  clothtest.py  flaglist.py  fonttest.py  glnoise.py  list.py  modelviewer-anaglyph.py  modelviewer-stereo.py  modelviewer.py  mountaintest.py  movieconverter.py  observer.py  particletest.py  perlintest.py  proxy.py  serverlist.py  skytest.py  traceproxy.py  worldgrabber.py  worldthumbnail.py  worldviewer.py
render/: Camera.cpp  GeometryExtractorVisitor.cpp  Ground.cpp  Selection.cpp
rules/: multi.set  sidewalk.set  test.set
share/: Cornered.bzw  H2O-R1.bzw  boxworld.bzw  pythonian.bzw  test.bzw
web/: .cvsignore  bzflag.mysql.dump  document.php  general.css  index.php  list-server.txt  master-bans.txt  motd.php  reviews.php  template.php
widgets/: MaterialWidget.cpp  QuickLabel.cpp  TransformWidget.cpp
windows/: ConsoleWindow.cpp  EventHandlerCollection.cpp  MainWindow.cpp  RenderWindow.cpp  View.cpp  main.cpp
(+1019 files in other folders)
