AC_INIT(bzedit.cpp)
AM_INIT_AUTOMAKE(bzedit, 2.1)
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# GNOME macros
# GNOME_INIT
# GNOME_COMMON_INIT
# GNOME_COMPILE_WARNINGS

# Internationalization
ALL_LINGUAS=""
# AM_GNOME_GETTEXT

# Checks for libraries.

### GTK+ ###
AM_PATH_GTK_2_0(2.0.3, , AC_MSG_ERROR([Cannot find proper GTK+ version]))
### GTK+ ###

### GtkGLArea ###
AM_PATH_GTKGL_2_0( , AC_MSG_ERROR([Cannot find gtkglarea]))
### GtkGLArea ###

AC_LANG_CPLUSPLUS

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(vector)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Add GNOME CFLAGS
GNOME_CFLAGS="`pkg-config --cflags libgnome-2.0 libgnomeui-2.0`"
GNOME_LIBS="`pkg-config --libs libgnome-2.0 libgnomeui-2.0`"
AC_SUBST(GNOME_CFLAGS)
AC_SUBST(GNOME_LIBS)

# Since were using autoconf, we're on linux. Tell us so
EXT_CFLAGS="-DLINUX"
EXT_LIBS=""
AC_SUBST(EXT_CFLAGS)
AC_SUBST(EXT_LIBS)

AC_OUTPUT([
Makefile
data/Makefile
help/Makefile
])
